# codex-profile-switcher

./: .gitignore  README.md  pyproject.toml
docs/: README.ja.md  README.ko.md  README.zh-CN.md
src/codex_profile_switcher/: __init__.py  cli.py  core.py  tui.py
