[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-profile-switcher"
version = "0.1.0"
description = "A tiny terminal UI for switching Codex Desktop auth/API profiles."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ken" }]
dependencies = []

[project.scripts]
codex-profile-switcher = "codex_profile_switcher.cli:main"
cpx = "codex_profile_switcher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
