[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-profiles"
version = "1.0.2"
description = "A tiny terminal UI for switching Codex Desktop auth/API profiles."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ken" }]
dependencies = []

[project.scripts]
codex-profiles = "codex_profile_switcher.cli:main"
cpx = "codex_profile_switcher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
